fix(web): align preview selection per glyph

--- a/editors/vscode-web/src/style.css
+++ b/editors/vscode-web/src/style.css
@@ -383,31 +383,39 @@ body {
 
 
 .typst-preview-page .tsel {
-  transform: translateY(0.32em);
-  transform-origin: left top;
-}
-
-.typst-preview-page .tsel,
-.typst-preview-page .tsel span {
   left: 0;
   position: fixed;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   color: transparent;
-  text-align: justify;
-  text-align-last: justify;
+  font-family: monospace;
+  text-align: left;
+  text-align-last: left;
   white-space: pre;
   pointer-events: auto;
   user-select: text;
   cursor: text;
+  transform: translateY(0.32em);
+  transform-origin: left top;
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
 }
 
+.typst-preview-page .tsel .tsel-token {
+  position: relative;
+  width: fit-content;
+  height: fit-content;
+}
 
 .typst-preview-page .tsel::selection,
-.typst-preview-page .tsel span::selection {
+.typst-preview-page .tsel .tsel-token::selection {
   color: transparent;
   background: #7db9dea0;
 }
+
+
 
 .typst-preview-indicator,
 .typst-preview-cursor {
